Fix nickname edit alignment

--- a/react-app/src/components/ServerMembers/MemberPage.css
+++ b/react-app/src/components/ServerMembers/MemberPage.css
@@ -55,6 +55,14 @@
     padding-top: 5px;
     padding-bottom: 10px;
     color: white;
+    height: max-content;
+}
+
+.member-nickname-container {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .nickname-edit-button {
