--- a/react-app/src/components/ServerMembers/NickNameEdit.css
+++ b/react-app/src/components/ServerMembers/NickNameEdit.css
@@ -3,6 +3,7 @@
     flex-direction: row;
     justify-content: space-between;
     width: 100%;
+    height: 28px;
 }
 
 .nickname-input {
@@ -11,6 +12,7 @@
     border: none;
     border-radius: 4px;
     padding-left: 4px;
+    height: 28px;
 }
 
 .save-nickName-button {
